--- a/web_flask/templates/home.html
+++ b/web_flask/templates/home.html
@@ -32,7 +32,7 @@
   </div>
   <div class="first-about-right">
     <div class="first-content-img">
-      <img src="../static/resources/lp-1.jpg" class="img-fluid" />
+      <img src="../static/resources/lp1.svg" class="img-fluid" />
     </div>
   </div>
 </div>
@@ -51,7 +51,7 @@
   </div>
   <div class="second-about-left">
     <div class="second-content-img">
-      <img src="../static/resources/lp-3.jpg" class="img-fluid" />
+      <img src="../static/resources/lp2.svg" class="img-fluid" />
     </div>
   </div>
 </div>
