--- a/web_flask/templates/home.html
+++ b/web_flask/templates/home.html
@@ -21,14 +21,9 @@
 
 <div id="first-about-container">
   <div class="first-about-left">
-    <div class="first-content">
       <h1>What is DataVizHub?</h1>
       <p>
-        DataVizHub is a data visualization tool that allows you to create
-        interactive charts, dashboards, and reports. It is a powerful tool that
-        helps you to visualize your data and share insights with your team.
-      </p>
-    </div>
+        DataVizHub empowers users with interactive charts, dashboards, and reports, fostering collaborative insights in teams through robust data visualization      </p>
   </div>
   <div class="first-about-right">
     <div class="first-content-img">
@@ -38,16 +33,10 @@
 </div>
 <div class="second-about-container">
   <div class="second-about-right">
-    <div class="second-content">
       <h1>Why DataVizHub?</h1>
       <p>
-        At DataVizHub, we believe that data has the power to transform the way
-        we understand the world. Our mission is to empower individuals and
-        businesses to unlock the full potential of their data through the art of
-        visualization. With our intuitive platform and powerful tools, we make
-        data visualization accessible, engaging, and impactful.
+        At DataVizHub, we're dedicated to making the transformative power of data accessible and impactful through intuitive visualization tools
       </p>
-    </div>
   </div>
   <div class="second-about-left">
     <div class="second-content-img">
