--- a/web_flask/static/styles/home.css
+++ b/web_flask/static/styles/home.css
@@ -200,7 +200,7 @@ body {
   margin: 8px 0;
 }
 
-@media only screen and  (max-width: 400px) {
+@media only screen and  (max-width: 500px) {
   .home-container {
     display: flex;
     align-items: center;
@@ -232,21 +232,75 @@ body {
 
   #first-about-container {
     display: flex;
+    flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-    height: 60vh;
+    height: 64vh;
     margin: 0;
+    padding: 12px;
   }
   #first-about-container .first-about-left {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
     background: unset;
   }
   #first-about-container .first-about-left h1{
+    width: unset;
     font-size: 28px;
   }
   #first-about-container .first-about-left p {
+    width: unset;
     font-size: 18px;
+    line-height: unset;
   }
+  #first-about-container .first-about-right img {
+    width: 200px;
+    height: 200px;
+
+  }
+  .second-about-container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    height: 64vh;
+    margin: 0;
+    padding: 12px;
+  }
+  .second-about-container .second-about-left {
+    width: 100%;
+    height: 100%;
+    background: unset;
+  }
+  .second-about-container .second-about-right h1{
+    width: unset;
+    font-size: 28px;
+  }
+  .second-about-container .second-about-right p {
+    width: unset;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: unset;
+  }
+  .second-about-container .second-about-left img {
+    width: 200px;
+    height: 200px;
+
+  }
+  #features-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #features-container h1{
+    margin-left: 0;
+    margin-bottom: 12px;
+  }
+  #features-container .features{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+  }
+
 }
