--- a/web_flask/static/styles/inside.css
+++ b/web_flask/static/styles/inside.css
@@ -129,3 +129,99 @@
   margin-top: 26px;
   border-radius: 8px;
 }
+.mb-history {
+    display: none;
+}
+
+@media only screen and (max-width: 400px) {
+    .main-container {
+        height: 100%;
+    }
+    #upload-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #img-view {
+        width: 360px;
+        height: 160px;
+    }
+    #img-view #upload-icon {
+        width: 60px;
+        height: 60px;
+    }
+    #upload-form .btn {
+        width: 360px;
+    }
+    #upload-form .hero-chart-container .chart-container {
+        width: 360px;
+    }
+    .history {
+        display: none;
+    }
+    .mb-history {
+        display: block;
+        background: #cce1f9;
+        border-radius: 8px;
+        margin-top: 24px;
+        width: 360px;
+        height: 42px;
+    }
+    .mb-history .options {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-end;
+        width: 360px;
+    }
+    .mb-history .delete-file {
+        width: 32px;
+    }
+    .mb-history .options-container {
+        display: flex;
+        flex-direction: row;
+    }
+    .mb-history .options-container .file-container {
+        width: 80px;
+    }
+    #options-container {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 401px) and  (max-width: 800px) {
+    .main-container {
+        height: 100%;
+    }
+    .hero-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 24px;
+    }
+    #upload-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 640px;
+    }
+    #img-view {
+        width: 480px;
+        height: 220px;
+    }
+    #img-view #upload-icon {
+        width: 120px;
+        height: 120px;
+    }
+    #upload-form .btn {
+        width: 480px;
+    }
+    #upload-form .hero-chart-container .chart-container {
+        width: 480px;
+    }
+    .history {
+        margin: 24px 0 0;
+        height: 640px;
+    }
+}
