--- a/web_flask/static/styles/register.css
+++ b/web_flask/static/styles/register.css
@@ -107,3 +107,42 @@
   }
 
 }
+
+@media only screen and (min-width: 501px) and (max-width: 800px){
+  .register-form-container {
+    width: 600px;
+    height: 480px;
+  }
+  .register-form-container .register-container {
+    width: 200px;
+    height: 560px;
+    margin-top: 24px;
+  }
+  .register-form-container .register-container h2{
+    font-size: 24px;
+    width: 200px;
+    margin-bottom: 16px;
+    margin-top: 16px;
+  }
+  .register-form-container .register-container form {
+    gap: 16px;
+  }
+  .register-form-container .register-container .form-floating{
+    width: 200px;
+    height: 36px;
+    margin-bottom: 8px;
+  }
+  .register-form-container .register-container .form-check {
+    margin: 0;
+  }
+  .register-form-container .register-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .register-form-container .register-img-cont img {
+    width: 320px;
+    height: 280px;
+  }
+
+}
