--- a/web_flask/templates/base.html
+++ b/web_flask/templates/base.html
@@ -29,12 +29,17 @@
     rel="stylesheet"
     href="{{ url_for('static', filename='styles/footer.css') }}?{{ cache_id }}"
   />
+      <link
+    rel="stylesheet"
+    href="{{ url_for('static', filename='styles/profile.css') }}?{{ cache_id }}"
+  />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="../static/scripts/menu.js?{{ cache_id }}" defer></script>
+    <script type="text/javascript" src="../static/scripts/profile.js?{{ cache_id }}" defer></script>
   </head>
   <body>
     <header class="header">
@@ -79,7 +84,7 @@
               </div>
               <a href="#" class="sub-menu-link">
                 <img src="../static/resources/profileEditIcon.png" />
-                <p>Edit profile</p>
+                <a href="{{ url_for('edit') }}">Edit profile</a>
               </a>
               <a href="#" class="sub-menu-link">
                 <img src="../static/resources/settingsIcon.png" />
