--- a/web_flask/templates/inside.html
+++ b/web_flask/templates/inside.html
@@ -162,7 +162,7 @@
       formData.append("user_id", "{{ current_user.id }}");
 
       const xhr = new XMLHttpRequest();
-      xhr.open("POST", "//www.chi-kara.tech/api/v1/upload");
+      xhr.open("POST", "//localhost:5000/api/v1/upload");
       xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
 
       xhr.onload = function () {
@@ -187,7 +187,7 @@
   function deleteFile() {
     const formData = new FormData();
     const xhr = new XMLHttpRequest();
-    xhr.open("DELETE", `//www.chi-kara.tech/api/v1/data/${file_id}`);
+    xhr.open("DELETE", `//localhost:5000/api/v1/data/${file_id}`);
     xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
 
     xhr.onload = function () {
@@ -206,7 +206,7 @@
   function retrieveData() {
     // Make the API call to get current user's data
     const xhr = new XMLHttpRequest();
-	  xhr.open("GET", `//www.chi-kara.tech/api/v1/data/user/{{ current_user.id }}`);
+	  xhr.open("GET", `//localhost:5000/api/v1/data/user/{{ current_user.id }}`);
     xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
 
     xhr.onload = function () {
@@ -269,7 +269,7 @@
       // Make the API call to get data
       const formData = new FormData();
       const xhr = new XMLHttpRequest();
-      xhr.open("GET", `//www.chi-kara.tech/api/v1/data/${file_id}`);
+      xhr.open("GET", `//localhost:5000/api/v1/data/${file_id}`);
       xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
 
       xhr.onload = function () {
