--- a/web_flask/templates/profile.html
+++ b/web_flask/templates/profile.html
@@ -3,6 +3,7 @@
 <div class="profile-cont">
     <div class="edit-cont">
         <div class="edit-img">
+            <h1>{{ current_user.username }}</h1>
             <div class="profile-img">
                 <img src="../static/resources/editProfile.svg" alt="profile image">
             </div>
@@ -13,23 +14,41 @@
         </div>
         <div class="edit-info">
             <form action="" method="post" novalidate>
+                {% if form.username.errors %}
+                <div class="form-floating  mb-3 mt-3">
+                    {% for error in form.username.errors %}
+                    {{ form.username(class="form-control is-invalid", id="floatingInputInvalid", placeholder="Username") }}
+                    <label for="floatingInputInvalid">{{ error }}</label>
+                    {% endfor %}    
+                </div>
+                {% else %}
                 <div  class="form-floating mb-3" id="floating-cont" userId="{{ current_user.id }}">
                     {{ form.hidden_tag() }}
                     {{ form.username(type="Username", class="form-control", id="floatingInput", placeholder="username") }}
                     <label for="floatingInput" id="username">Username</label>
                 </div>
+                {% endif %}
+                {% if form.email.errors %}
+                <div class="form-floating mb-3 mt-3">
+                    {% for error in form.email.errors %}
+                    {{ form.email(class="form-control is-invalid", id="floatingEmailInvalid", placeholder="name@example.com") }}
+                    <label for="floatingEmailInvalid">{{ error }}</label>
+                    {% endfor %}
+                </div>
+                {% else %}
                 <div class="form-floating mb-3">
-                    {{ form.email(class_="form-control", id="floatingEmail", placeholder="name@example.com") }}
+                    {{ form.email(class="form-control", id="floatingEmail", placeholder="name@example.com") }}
                     <label for="floatingEmail" id="email">Email address</label>
                 </div>
+                {% endif %}
                 <div class="form-floating">
                     {{ form.password(type="password", class="form-control", id="floatingPassword", placeholder="Password") }}
                     <label for="floatingPassword" id="password">Password</label>
                 </div>
                 <div class="edit-confirm">
-                <button class="btn btn-secondary">Edit</button>
+                <button class="btn btn-secondary" id="edit-btn">Edit</button>
                 {{ form.submit(class="btn btn-success") }}
-                <button class="btn btn-danger">Cancel</button>
+                <button class="btn btn-danger" id="cancel-btn">Cancel</button>
                 </div>
             </form>
         </div>
