--- a/web_flask/templates/profile.html
+++ b/web_flask/templates/profile.html
@@ -7,11 +7,15 @@
             <div class="profile-img">
                 <img id="profileImage" src="../static/resources/editProfile.svg" alt="profile image">
             </div>
-            <div class="edit-img-btn">
-                <input type="file" id="uploaded-img" accept=".jpeg, .png, .jpg" hidden/>
-                <label for="uploaded-img" class="btn btn-primary">Edit image</label>
+            <div class="btn-cont">
+                <div class="edit-img-btn">
+                    <input type="file" id="uploaded-img" accept=".jpeg, .png, .jpg" hidden/>
+                    <label for="uploaded-img" class="btn btn-primary">Edit image</label>
+                </div>
+                <div class="edit-img-btn">
+                    <button type=button id="delete-img" class="btn btn-danger">Delete image</button>
+                </div>
             </div>
-            
             <div class="img-label">
                 <h3>Change Profile Picture</h3>
                 <p>Be yourself and join us</p>
