--- a/web_flask/static/styles/profile.css
+++ b/web_flask/static/styles/profile.css
@@ -1,5 +1,4 @@
 .profile-cont {
-    height: 100%;
     padding: 64px 0;
     display: flex;
     align-items: center;
@@ -49,6 +48,18 @@
     color: black;
     font-size: 24px;
     margin: 8px 0;
+}
+
+.edit-cont .btn-cont {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 12px 0;
+}
+.edit-cont .btn-cont .btn{
+    width: 140px;
+    height: 40px;
 }
 .edit-info {
     display: flex;
