--- a/web_flask/templates/base.html
+++ b/web_flask/templates/base.html
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="../static/scripts/profile.js?{{ cache_id }}" defer></script>
   </head>
   <body>
-    <header class="header">
+    <header id="header" userId="{{ current_user.id }}">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           {% if current_user.is_anonymous %}
@@ -71,15 +71,17 @@
           </div>
           </div>
           {% else %}
-          <img
-            src="../static/resources/profileIcon.png"
-            class="profile"
-            onclick="toggleMenu()"
-          />
+          <div class="menu-profile">
+            <img id="menu-img"
+              src="../static/resources/profileIcon.png"
+              class="profile"
+              onclick="toggleMenu()"
+            />
+          </div>
           <div class="sub-menu-wrap" id="subMenu">
             <div class="sub-menu">
               <div class="user-info">
-                <img src="../static/resources/profileIcon.png" />
+                <img src="../static/resources/profileIcon.png" id="sub-menu-img" />
                 <h2>{{ current_user.username }}</h2>
               </div>
               <a  href="{{ url_for('edit') }}" class="sub-menu-link">
