--- a/web_flask/static/styles/profile.css
+++ b/web_flask/static/styles/profile.css
@@ -1,5 +1,5 @@
 .profile-cont {
-    padding: 64px 0;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
